--- a/styles/base.css
+++ b/styles/base.css
@@ -3,3 +3,15 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+nav {
+  width: 100%;
+  padding: 30px;
+  background-color: rgb(136, 156, 255);
+}
+
+nav > p {
+  text-align: center;
+  font-size: 35px;
+  font-weight: bold;
+}
